--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,6 +3,11 @@
   <head>
     <title>{{ title }}</title>
     <style>
+      * {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+      }
       /* General Styles */
       body {
         margin: 0;
@@ -16,7 +21,7 @@
         background-size: 400% 400%;
         animation: gradientBG 10s ease infinite;
       }
-      
+
       html {
         margin: 0;
         padding: 0;
@@ -29,7 +34,6 @@
         background-size: 400% 400%;
         animation: gradientBG 10s ease infinite;
       }
-    
 
       @keyframes gradientBG {
         0% {
@@ -58,7 +62,7 @@
 
       .signup-container h1 {
         margin-bottom: 20px;
-        font-size: 28px;
+        font-size: 80px;
         font-weight: bold;
         color: #ffffff;
         text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
