added Search Bar

--- a/templates/index.html
+++ b/templates/index.html
@@ -229,9 +229,7 @@
           #7a00e6
         ); /* Blue and purple */
         color: #fff;
-        margin-top: 20px;
         font-weight: 500;
-        border-radius: 0 0 12px 12px;
       }
       footer p {
         margin: 0;
@@ -353,7 +351,7 @@
     <!-- Sidebar -->
     <main>
       <nav>
-        <h1>{{ heading }}</h1>
+        <h1 style="margin-top: 10px;">{{ heading }}</h1>
         <ul>
           <li>
             <button
@@ -379,13 +377,69 @@
           </li>
           <li><a href="/completed" class="{{ completed }}">Completed</a></li>
         </ul>
+
+        <!-- Search Bar -->
+
         <a href="/logout" class="logout-btn">Logout</a>
       </nav>
 
       <!-- Main Content -->
       <div class="main-content">
         <!-- <hr /> -->
-
+        <form
+          action="/search"
+          method="GET"
+          style="width: --webkit-fill-available; margin-top: 10px"
+        >
+          <label for="refer" style="color: white; font-size: 14px"
+            >Search by:</label
+          >
+          <select
+            name="refer"
+            id="refer"
+            style="
+              width: 100%;
+              padding: 5px;
+              margin-bottom: 10px;
+              border-radius: 8px;
+              border: none;
+            "
+            required
+          >
+            <option value="name">Name</option>
+            <option value="desc">Description</option>
+            <option value="creation_date">Date</option>
+            <option value="priority">Priority</option>
+          </select>
+          <input
+            type="text"
+            name="key"
+            placeholder="Search..."
+            style="
+              width: 100%;
+              padding: 10px;
+              border-radius: 8px;
+              border: none;
+              margin-bottom: 10px;
+            "
+            required
+          />
+          <button
+            type="submit"
+            style="
+              width: 100%;
+              padding: 10px;
+              background: #6495ed;
+              color: white;
+              border: none;
+              border-radius: 8px;
+              font-weight: 600;
+              cursor: pointer;
+            "
+          >
+            Search
+          </button>
+        </form>
         <!-- Task List Section -->
         <div id="task-list-section">
           {% if task_list[0] %}
