--- a/templates/index.html
+++ b/templates/index.html
@@ -181,7 +181,7 @@
       form {
         /* text-align: -webkit-center; */
         display: flex;
-        /* width: 90%; */
+        width:  -webkit-fill-available;
         margin: 20px auto;
         padding: 12px;
         align-items: center;
@@ -451,7 +451,6 @@
               display: grid;
               grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
               gap: 20px;
-              margin: 0px 5%;
             "
           >
             {% for task in task_list %}
